# easypack

./: .vimrc  CMakeLists.txt  LICENSE  PKGBUILD  README.md
Documentation/: EXECUTABLE_STRUCTURE.md
addons/autorun_creator/: CMakeLists.txt  autorun_creator.c
addons/cli_installer/: CMakeLists.txt  README.md  cli_installer.c  install.clii.example
build_utilities/: size_initializer.c  wrap_awd.sh
example_addon/: CMakeLists.txt  example_addon.c
include/: addons.h  compatibility-layer.h  dynamic_string.h  easypack.h  easypack_addon.h  embedded_filesystem.h  file_sections.h  forward.h  string_array.h  utils.h
src/: addons.c  addons.linux.c  addons.windows.c  dynamic_string.c  embedded_filesystem.c  file_sections.c  file_sections.linux.c  file_sections.windows.c  forward.c  forward.linux.c  forward.windows.c  main.c  string_array.c  utils.c  utils.linux.c  utils.windows.c
tests/: dynamic_string.c  file_sections.c  string_array.c  testutils.h  utils.c
